Added a sync with WP corp portal. Added some mock data like salary or birthday. New endpoints for admin
